test/integration/good/tuples/array-tuple-param.stan
parameters {
  array[10] (real, real) arr;
}
