test/integration/bad/data_index/non_data_index10.stan
parameters {
  array[3] real y;

}
transformed parameters {
  cholesky_factor_cov[size(y)] z;
}
